重构了群聊发送消息与游戏逻辑